objects/test_form__c.object
<CustomObject>
    <label>test form</label>
    <nameField>
        <label>test form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lkacc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>test forms</relationshipLabel>
        <relationshipName>test_forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkcon__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>test forms</relationshipLabel>
        <relationshipName>test_forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Bill__c</fullName>
        <formula>Current_Bill__c  +  water_bill__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>water_bill__c</fullName>
        <label>water bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_name__c</fullName>
        <formula>lkacc__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bill__c</fullName>
        <label>Current Bill</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>created_date__c</fullName>
        <label>created date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>no_of_active_days__c</fullName>
        <formula>TODAY()  -  created_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>no of active days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>